--- a/assets/custom.css
+++ b/assets/custom.css
@@ -31,6 +31,6 @@ span.hljs-hex_number {
 span.hljs-comment {
     color: #808080;
 }
-span.hljs.language-undefined {
+code.hljs.language-undefined {
     color: #ffffff;
 }
