feat(entry RefreshExample): add RefreshExample component to entry folder
- Add a new file "RefreshExample.ets" to the entry/src/main/ets/pages directory, which contains a new component called RefreshExample.
- The RefreshExample component includes a pull-down refresh functionality and displays the current refresh status and counter.
- The component uses the Refresh component and handles the state change event.
- Also modify the file "syntax-test.html" to include the new code snippet for the RefreshExample component.
- Add a new custom CSS file "custom.css" to the assets directory.

Conventional Commits:
- feat(entry): add RefreshExample component

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -9,7 +9,9 @@ span.hljs-meta, span.hljs-variable {
 span.hljs-keyword {
     color: #E2DA90;
 }
-
+/*span.hljs-title.class_ {*/
+/*    color: #607874;*/
+/*}*/
 span.hljs-title {
     color: #65CCE1;
 }
